force-app/main/default/objects/AH_UDC_Response__c/AH_UDC_Response__c.object-meta.xml
<CustomObject>
    <description>This object contains details of Responses to Workbook steps</description>
    <label>UDC Response</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UDC Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>