force-app/main/default/objects/AH_UDC_Response__c/fields/IsComplete__c.field-meta.xml
<CustomField>
    <fullName>IsComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This determines if the Response is Complete meaning that all the Response QA records have been created.</description>
    <inlineHelpText>This determines if the Response is Complete meaning that all the Response QA records have been created.</inlineHelpText>
    <label>Is Complete</label>
    <type>Checkbox</type>
</CustomField>