force-app/main/default/objects/AH_UDC_Response__c/fields/Responded__c.field-meta.xml
<CustomField>
    <fullName>Responded__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>This is the Date/Time at which the response was recorded</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the Date/Time at which the response was recorded</inlineHelpText>
    <label>Responded</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>