force-app/main/default/objects/AH_UDC_Response__c/fields/Responder__c.field-meta.xml
<CustomField>
    <fullName>Responder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the User who sent the response.</description>
    <inlineHelpText>This is the User who sent the response.</inlineHelpText>
    <label>Responder</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UDC_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>