force-app/main/default/objects/AH_UDC_Response__c/fields/WorkbookStep__c.field-meta.xml
<CustomField>
    <fullName>WorkbookStep__c</fullName>
    <description>This is the Sent Workbook Step to which the response is tied</description>
    <inlineHelpText>This is the Sent Workbook Step to which the response is tied</inlineHelpText>
    <label>Workbook Step</label>
    <referenceTo>AH_UDC_WorkbookStep__c</referenceTo>
    <relationshipLabel>Responses</relationshipLabel>
    <relationshipName>UDC_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>