force-app/main/default/objects/AH_UDC_Response__c/recordTypes/AH_UDC_ResponseAmadeusForm.recordType-meta.xml
<RecordType>
    <fullName>AH_UDC_ResponseAmadeusForm</fullName>
    <active>true</active>
    <description>These are responses that came from AmadeusForm forms</description>
    <label>Response Amadeus Form</label>
</RecordType>