force-app/main/default/objects/AH_UDC_Response__c/recordTypes/AH_UDC_ResponseFormAssembly.recordType-meta.xml
<RecordType>
    <fullName>AH_UDC_ResponseFormAssembly</fullName>
    <active>true</active>
    <description>These are responses that came from Form Assembly forms</description>
    <label>Response Form Assembly</label>
</RecordType>